--- a/SFML-playground/SFML-playground/SFML-playground.vcxproj.filters
+++ b/SFML-playground/SFML-playground/SFML-playground.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\FPS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
